--- a/dynatrace-operator/chart/default/templates/Common/activegate/serviceaccount-activegate.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/activegate/serviceaccount-activegate.yaml
@@ -17,4 +17,4 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: dynatrace-activegate
-  namespace: dynatrace
+  namespace: {{ .Release.Namespace }}
