--- a/dynatrace-operator/chart/default/tests/Common/customresource-modules/customresource-dynakube_cloudnativefullstack.yaml
+++ b/dynatrace-operator/chart/default/tests/Common/customresource-modules/customresource-dynakube_cloudnativefullstack.yaml
@@ -10,13 +10,14 @@ tests:
       cloudNativeFullStack.enabled: false
     asserts:
       - isNull:
-          path: spec.oneAgent
+          path: spec.oneAgent.cloudNativeFullStack
 
   - it: should exist if enabled
     set:
       apiUrl: test-url
       apiToken: test-token
       paasToken: test-token
+      classicFullStack.enabled: false
       cloudNativeFullStack.enabled: true
     asserts:
       - isNotNull:
@@ -27,6 +28,7 @@ tests:
       apiUrl: test-url
       apiToken: test-token
       paasToken: test-token
+      classicFullStack.enabled: false
       cloudNativeFullStack.enabled: true
       cloudNativeFullStack.version: "v.1.2"
     asserts:
@@ -41,6 +43,7 @@ tests:
       apiUrl: test-url
       apiToken: test-token
       paasToken: test-token
+      classicFullStack.enabled: false
       cloudNativeFullStack.enabled: true
       cloudNativeFullStack.autoUpdate: false
     asserts:
@@ -55,6 +58,7 @@ tests:
       apiUrl: test-api-url
       apiToken: test-api-token
       paasToken: test-paas-token
+      classicFullStack.enabled: false
       cloudNativeFullStack:
         enabled: true
         nodeSelector:
@@ -71,6 +75,7 @@ tests:
       apiUrl: test-api-url
       apiToken: test-api-token
       paasToken: test-paas-token
+      classicFullStack.enabled: false
       cloudNativeFullStack:
         enabled: true
         tolerations:
@@ -93,6 +98,7 @@ tests:
       apiUrl: test-api-url
       apiToken: test-api-token
       paasToken: test-paas-token
+      classicFullStack.enabled: false
       cloudNativeFullStack:
         enabled: true
         oneAgentResources:
@@ -127,6 +133,7 @@ tests:
       apiUrl: test-api-url
       apiToken: test-api-token
       paasToken: test-paas-token
+      classicFullStack.enabled: false
       cloudNativeFullStack:
         enabled: true
         args:
@@ -143,6 +150,7 @@ tests:
       apiUrl: test-api-url
       apiToken: test-api-token
       paasToken: test-paas-token
+      classicFullStack.enabled: false
       cloudNativeFullStack:
         enabled: true
         env:
@@ -159,6 +167,7 @@ tests:
       apiUrl: test-api-url
       apiToken: test-api-token
       paasToken: test-paas-token
+      classicFullStack.enabled: false
       cloudNativeFullStack:
         enabled: true
         priorityClassName: test-priority-class
@@ -172,6 +181,7 @@ tests:
       apiUrl: test-api-url
       apiToken: test-api-token
       paasToken: test-paas-token
+      classicFullStack.enabled: false
       cloudNativeFullStack:
         enabled: true
         dnsPolicy: test-dns-policy
@@ -185,6 +195,7 @@ tests:
       apiUrl: test-api-url
       apiToken: test-api-token
       paasToken: test-paas-token
+      classicFullStack.enabled: false
       cloudNativeFullStack:
         enabled: true
         labels:
@@ -201,6 +212,7 @@ tests:
       apiUrl: test-url
       apiToken: test-token
       paasToken: test-token
+      classicFullStack.enabled: false
       cloudNativeFullStack:
         enabled: true
         namespaceSelector:
@@ -226,6 +238,7 @@ tests:
       apiUrl: test-api-url
       apiToken: test-api-token
       paasToken: test-paas-token
+      classicFullStack.enabled: false
       cloudNativeFullStack:
         enabled: true
         initResources:
