--- a/dynatrace-operator/chart/default/templates/Common/customresource-dynakube.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/customresource-dynakube.yaml
@@ -57,7 +57,8 @@ spec:
   enableIstio: {{ .Values.enableIstio }}
   {{- end }}
 
-  {{- if ge (len .Values.activeGate.capabilities) (1)}}
+  {{- if .Values.activeGate }}
+  {{- if ge (len .Values.activeGate.capabilities) 1 }}
   activeGate:
 
     capabilities: {{ .Values.activeGate.capabilities | toYaml | nindent 8 }}
@@ -108,9 +109,11 @@ spec:
       {{- end }}
     {{- end }}
   {{- end }}
+  {{- end }}
 
   oneAgent:
-    {{- if .Values.cloudNativeFullStack.enabled }}
+    {{- if .Values.cloudNativeFullStack }}
+    {{- if.Values.cloudNativeFullStack.enabled }}
     cloudNativeFullStack:
       {{- if .Values.cloudNativeFullStack.version }}
       version: {{.Values.cloudNativeFullStack.version}}
@@ -158,7 +161,9 @@ spec:
       namespaceSelector: {{ .Values.cloudNativeFullStack.namespaceSelector | toYaml | nindent 10 }}
       {{- end }}
     {{- end }}
+    {{- end }}
 
+    {{- if .Values.applicationMonitoring }}
     {{- if .Values.applicationMonitoring.enabled }}
     applicationMonitoring:
       {{- if .Values.applicationMonitoring.image }}
@@ -179,7 +184,9 @@ spec:
       namespaceSelector: {{ .Values.applicationMonitoring.namespaceSelector | toYaml | nindent 10 }}
       {{- end }}
     {{- end }}
+    {{- end }}
 
+    {{- if .Values.hostMonitoring }}
     {{- if .Values.hostMonitoring.enabled }}
     hostMonitoring:
       {{- if .Values.hostMonitoring.image }}
@@ -223,6 +230,7 @@ spec:
       {{- if .Values.hostMonitoring.labels }}
       labels: {{ .Values.hostMonitoring.labels | toYaml | nindent 8 }}
       {{- end }}
+    {{- end }}
     {{- end }}
 
   {{- if .Values.classicFullStack.enabled }}
