Intorduces labels to all serviceaccounts

--- a/dynatrace-operator/chart/default/templates/Common/activegate/serviceaccount-activegate.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/activegate/serviceaccount-activegate.yaml
@@ -18,3 +18,5 @@ kind: ServiceAccount
 metadata:
   name: dynatrace-activegate
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "dynatrace-operator.labels" . | nindent 4 }}
