--- a/dynatrace-operator/chart/default/templates/Common/csi/serviceaccount-csi.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/csi/serviceaccount-csi.yaml
@@ -18,4 +18,6 @@ kind: ServiceAccount
 metadata:
   name: dynatrace-oneagent-csi-driver
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "dynatrace-operator.labels" . | nindent 4 }}
 {{end}}
