--- a/dynatrace-operator/chart/default/templates/Common/data-ingest/serviceaccount-data-ingest.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/data-ingest/serviceaccount-data-ingest.yaml
@@ -17,3 +17,5 @@ kind: ServiceAccount
 metadata:
   name: dynatrace-data-ingest
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "dynatrace-operator.labels" . | nindent 4 }}
