--- a/dynatrace-operator/chart/default/templates/Common/customresource-dynakube.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/customresource-dynakube.yaml
@@ -21,7 +21,7 @@ kind: DynaKube
 metadata:
   annotations:
     {{- if ne .Values.platform "google"}}
-    "helm.sh/hook": post-install
+    "helm.sh/hook": post-install,post-upgrade
     {{ end }}
   name: {{ .Values.name }}
   namespace: {{ .Release.Namespace }}
@@ -58,7 +58,7 @@ spec:
   {{- end }}
 
   {{- if .Values.activeGate }}
-  {{- if .Values.activeGate.capabilities }}
+  {{- if .Values.activeGate.capabilities }} {{/* For compatibility between 0.2.3 and 0.3.0 */}}
   {{- if ge (len .Values.activeGate.capabilities) 1 }}
   activeGate:
 
@@ -114,7 +114,7 @@ spec:
   {{- end }}
 
   oneAgent:
-    {{- if .Values.cloudNativeFullStack }}
+    {{- if .Values.cloudNativeFullStack }} {{/* For compatibility between 0.2.3 and 0.3.0 */}}
     {{- if.Values.cloudNativeFullStack.enabled }}
     cloudNativeFullStack:
       {{- if .Values.cloudNativeFullStack.version }}
@@ -165,7 +165,7 @@ spec:
     {{- end }}
     {{- end }}
 
-    {{- if .Values.applicationMonitoring }}
+    {{- if .Values.applicationMonitoring }} {{/* For compatibility between 0.2.3 and 0.3.0 */}}
     {{- if .Values.applicationMonitoring.enabled }}
     applicationMonitoring:
       {{- if .Values.applicationMonitoring.image }}
@@ -188,7 +188,7 @@ spec:
     {{- end }}
     {{- end }}
 
-    {{- if .Values.hostMonitoring }}
+    {{- if .Values.hostMonitoring }} {{/* For compatibility between 0.2.3 and 0.3.0 */}}
     {{- if .Values.hostMonitoring.enabled }}
     hostMonitoring:
       {{- if .Values.hostMonitoring.image }}
@@ -238,13 +238,17 @@ spec:
   {{- if .Values.classicFullStack.enabled }}
     classicFullStack:
 
-      {{- if .Values.classicFullStack.image }}
+      {{ if .Values.oneAgent }} {{/* For compatibility between 0.2.3 and 0.3.0 */}}
+      image: {{.Values.oneAgent.image | default "" | quote}}
+      {{ else if .Values.classicFullStack.image }}
       image: {{.Values.classicFullStack.image}}
-      {{- end }}
+      {{ end }}
 
-      {{- if .Values.classicFullStack.version }}
+      {{ if .Values.oneAgent}} {{/* For compatibility between 0.2.3 and 0.3.0 */}}
+      version: {{.Values.oneAgent.version | default "" | quote}}
+      {{ else if .Values.classicFullStack.version }}
       version: {{.Values.classicFullStack.version}}
-      {{- end }}
+      {{ end }}
 
       {{- if .Values.classicFullStack.nodeSelector }}
       nodeSelector: {{ .Values.classicFullStack.nodeSelector | toYaml | nindent 10 }}
@@ -254,7 +258,9 @@ spec:
       tolerations: {{ .Values.classicFullStack.tolerations | toYaml | nindent 10 }}
       {{- end }}
 
-      {{- if .Values.classicFullStack.oneAgentResources }}
+      {{ if .Values.classicFullStack.resources }} {{/* For compatibility between 0.2.3 and 0.3.0 */}}
+      oneAgentResources: {{.Values.classicFullStack.resources | toYaml | nindent 10 }}
+      {{- else if .Values.classicFullStack.oneAgentResources }}
       oneAgentResources: {{ .Values.classicFullStack.oneAgentResources | toYaml | nindent 10}}
       {{- end }}
 
@@ -270,7 +276,13 @@ spec:
       priorityClassName: {{ .Values.classicFullStack.priorityClassName }}
       {{- end }}
 
+      {{ if .Values.oneAgent }} {{/* For compatibility between 0.2.3 and 0.3.0 */}}
+      autoUpdate: {{.Values.oneAgent.autoUpdate}}
+      {{ else if .Values.classicFullStack.autoUpdate }}
       autoUpdate: {{.Values.classicFullStack.autoUpdate}}
+      {{ else }}
+      autoUpdate: false
+      {{ end }}
 
       {{- if .Values.classicFullStack.dnsPolicy }}
       dnsPolicy: {{ .Values.classicFullStack.dnsPolicy }}
@@ -286,9 +298,11 @@ spec:
   kubernetesMonitoring:
     enabled: {{ .Values.kubernetesMonitoring.enabled }}
 
-    {{- if .Values.kubernetesMonitoring.image }}
+    {{ if .Values.activeGate.image }} {{/* For compatibility between 0.2.3 and 0.3.0 */}}
+    image: {{.Values.activeGate.image | default "" }}
+    {{ else if .Values.kubernetesMonitoring.image }}
     image: {{.Values.kubernetesMonitoring.image}}
-    {{- end }}
+    {{ end }}
 
     {{- if .Values.kubernetesMonitoring.replicas }}
     replicas: {{ .Values.kubernetesMonitoring.replicas }}
@@ -333,9 +347,11 @@ spec:
   routing:
     enabled: {{ .Values.routing.enabled }}
 
-    {{- if .Values.routing.image }}
+    {{ if .Values.activeGate.image }} {{/* For compatibility between 0.2.3 and 0.3.0 */}}
+    image: {{.Values.activeGate.image | default "" }}
+    {{ else if .Values.routing.image }}
     image: {{.Values.routing.image}}
-    {{- end }}
+    {{ end }}
 
     {{- if .Values.routing.replicas }}
     replicas: {{ .Values.routing.replicas }}
